finished creating the property listinsg page.
Created the property listings page, added Geo location to the application to get  location of listed properties and added  enabled Firebase storage to store image data of the properties.

--- a/src/index.css
+++ b/src/index.css
@@ -737,6 +737,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .formButtonActive {
   background-color: #00cc66;
